--- a/manifest.json
+++ b/manifest.json
@@ -18,5 +18,5 @@
     }
   ],
   "id": "e-Warga RW6",
-  "description": "e-Warga RW6 Puri Agung 2 adalah aplikasi digital untuk membantu pengelolaan data warga secara terpusat. Aplikasi ini memudahkan pengurus RW/RT dalam mencatat, memperbarui, serta memantau data warga secara cepat, rapi, dan transparan melalui perangkat mobile."
+  "description": "e-Warga RW6 adalah aplikasi digital untuk membantu pengelolaan data warga perumahan Puri Agung 2 RW 6 secara terpusat. Aplikasi ini memudahkan pengurus RW/RT dalam mencatat, memperbarui, serta memantau data warga secara cepat, rapi, dan transparan melalui perangkat mobile."
 }
